<resources>
    <string name="app_name">Calculator</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="p">*</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="add">add</string>
    <string name="a">+</string>
    <string name="m">m</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="equal">=</string>
    <string name="num_0">0</string>
    <string name="nut">.</string>
    <string name="devide">/</string>
    <string name="ce">CE</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="back">Back</string>
    <string name="x_2">x^2</string>
    <string name="power">x^2</string>
    <string name="x_y">x^y</string>
    <string name="two">二进制</string>
    <string name="eight">八进制</string>
    <string name="sixteen">十六进制</string>
    <string name="transfer">换算</string>
    <string name="cm">cm</string>
    <string name="km">km</string>
    <string name="length">长度换算</string>
    <string name="g">g</string>
    <string name="kg">kg</string>
    <string name="weight">重量换算</string>
    <string name="t">t</string>
    <string name="volume">体积换算</string>
    <string name="m_3">m³</string>
    <string name="cm_3">cm³</string>
    <string name="km_3">km³</string>
</resources>
