<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sunnny.calculator.MainActivity">

    <EditText
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:editable="false"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_weight="8"
        android:layout_height="0dp">

        <TableRow>

            <Button
                android:id="@+id/btn_ce"
                android:text="@string/ce" />
            <Button
                android:id="@+id/btn_back"
                android:text="@string/back" />

            <Button
                android:id="@+id/btn_power"
                android:text="@string/x_y" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_7"
                android:text="@string/num_7" />

            <Button
                android:id="@+id/btn_8"
                android:text="@string/num_8" />

            <Button
                android:id="@+id/btn_9"
                android:text="@string/num_9" />

            <Button
                android:id="@+id/btn_add"
                android:text="@string/a" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_4"
                android:text="@string/num_4" />

            <Button
                android:id="@+id/btn_5"
                android:text="@string/num_5" />

            <Button
                android:id="@+id/btn_6"
                android:text="@string/num_6" />

            <Button
                android:id="@+id/btn_minus"
                android:text="@string/minus" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_1"
                android:text="@string/num_1" />

            <Button
                android:id="@+id/btn_2"
                android:text="@string/num_2" />

            <Button
                android:id="@+id/btn_3"
                android:text="@string/num_3" />

            <Button
                android:id="@+id/btn_multiply"
                android:text="@string/multiply" />
            />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_equal"
                android:text="@string/equal" />

            <Button
                android:id="@+id/btn_0"
                android:text="@string/num_0" />

            <Button
                android:id="@+id/btn_nut"
                android:text="@string/nut" />

            <Button
                android:id="@+id/btn_devide"
                android:text="@string/devide" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_sin"
                android:text="@string/sin" />

            <Button
                android:id="@+id/btn_cos"
                android:text="@string/cos" />

            <Button
                android:id="@+id/btn_left"
                android:text="@string/left" />

            <Button
                android:id="@+id/btn_right"
                android:text="@string/right" />
        </TableRow>
        <TableRow>

            <Button
                android:id="@+id/btn_two"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn_eight"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn_sixteen"
                android:text="@string/sixteen" />
        </TableRow>
    </TableLayout>
</LinearLayout>
