<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Conversion">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/length"
                    android:text="@string/length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/cm_value"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/cm"
                        android:text="@string/cm"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/m_value"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/m"
                        android:text="@string/m"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/km_value"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/km"
                        android:text="@string/km"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Button
                    android:id="@+id/tans_len"
                    android:layout_gravity="right"
                    android:text="@string/transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/weight"
                    android:text="@string/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/g_value"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/g"
                        android:text="@string/g"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/kg_value"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/kg"
                        android:text="@string/kg"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/t_value"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/t"
                        android:text="@string/t"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Button
                    android:id="@+id/tans_wei"
                    android:layout_gravity="right"
                    android:text="@string/transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/volume"
                    android:text="@string/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/cm_3_value"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/cm_3"
                        android:text="@string/cm_3"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/m_3_value"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/m_3"
                        android:text="@string/m_3"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/km_3_value"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/km_3"
                        android:text="@string/km_3"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Button
                    android:id="@+id/tans_col"
                    android:layout_gravity="right"
                    android:text="@string/transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
